<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MARTEE</string>
    <string name="action_profile">Profile</string>

    <!-- Strings for dialog_profile.xml -->
   	<string name="gender">Gender</string>
	<string name="male">Male</string>
   	<string name="female">Female</string>
	<string name="height">Height</string>
   	<string name="ft">ft.</string>
   	<string name="in">in.</string>
   	<string name="weight">Weight</string>
   	<string name="target_weight">Set a target weight</string>
   	<string name="lbs">lbs.</string>
   	<string name="my_weight">My Weight</string>
   	<string name="my_target">Target Weight</string>
   	<string name="age">Age</string>
   	<string name="yrs">yrs.</string>
   	<string name="name">Name</string>
   	
   	<!-- Placeholder strings for list_element_food -->
  	<string name="placeholder_food_title">Food Name</string>
  	<string name="placeholder_calories">cal 350</string>
  	<string name="placeholder_carb">carb 20</string>
  	<string name="placeholder_fat">fat 5</string>
  	<string name="placeholder_protein">pro 10</string>
  	
    <!-- Strings for the main day view fragment -->
    <string name="placeholder_username">John Doe</string>
    <string name="placeholder_loadtype">Rifleman</string>
    <string name="placeholder_nutrition_ratio">0000\nout of\n0000</string>
    <string name="button_logfood">Log Food</string>
    <string name="button_logactivity">Log Activity</string>
    <string name="button_viewday">View Timeline</string>
    <string name="label_foodlist">Today\'s Foods</string>
    <string name="label_gearbtn">Combat Load</string>
    
    <!-- Strings for the nutrition types -->
    <string name="calories">Calories</string>
    <string name="carbs">Carbs</string>
    <string name="fat">Fat</string>
    <string name="protein">Protein</string>
    <string name="calories_unit">kCal</string>
    <string name="grams_unit">g</string>
    
    <!-- Strings for the timeline -->
    <string name="time_000">0:00</string>
    <string name="time_100">1:00</string>
    <string name="time_200">2:00</string>
    <string name="time_300">3:00</string>
    <string name="time_400">4:00</string>
    <string name="time_500">5:00</string>
    <string name="time_600">6:00</string>
    <string name="time_700">7:00</string>
    <string name="time_800">8:00</string>
    <string name="time_900">9:00</string>
    <string name="time_1000">10:00</string>
    <string name="time_1100">11:00</string>
    <string name="time_1200">12:00</string>
    <string name="time_1300">13:00</string>
    <string name="time_1400">14:00</string>
    <string name="time_1500">15:00</string>
    <string name="time_1600">16:00</string>
    <string name="time_1700">17:00</string>
    <string name="time_1800">18:00</string>
    <string name="time_1900">19:00</string>
    <string name="time_2000">20:00</string>
    <string name="time_2100">21:00</string>
    <string name="time_2200">22:00</string>
    <string name="time_2300">23:00</string>
    <string name="placeholder_blank_string"></string>
    <string name="placeholder_content_description"></string>
    
    <!-- Strings for picker_exercise -->
    <string name="combat">Combat</string>
    <string name="non_combat">Non-Combat</string>
    
    <!-- Strings for list_element_exercise -->
    <string name="placeholder_exercise_name">Exercise Name</string>
    <string name="placeholder_time">13:00</string>
    <string name="placeholder_calories_exer">1250 calories</string>
    
</resources>
