<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/list_element_food_main_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="20dp">

    <TextView
        android:id="@+id/list_element_food_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="7dp"
        android:text="@string/placeholder_food_title"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/list_element_food_calories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/calories_color"
            android:gravity="center"
            android:text="@string/placeholder_calories"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/list_element_food_carbs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/carbs_color"
            android:gravity="center"
            android:text="@string/placeholder_carb"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/list_element_food_fat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/fat_color"
            android:gravity="center"
            android:text="@string/placeholder_fat"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/list_element_food_protein"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/protein_color"
            android:gravity="center"
            android:text="@string/placeholder_protein"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>