<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        android:textSize="18sp" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/dialog_profile_male" 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:layout_weight="1" />

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/dialog_profile_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:layout_weight="1" />

    </LinearLayout>

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/height"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"  >

        <SeekBar
            android:id="@+id/dialog_profile_height_feet_seeker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />

        <TextView
            android:id="@+id/dialog_profile_height_feet_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".7"
            android:text="@string/ft"
            android:textSize="18sp" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"  >

        <SeekBar
            android:id="@+id/dialog_profile_inches_feet_seeker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />

        <TextView
            android:id="@+id/dialog_profile_inches_feet_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".7"
            android:text="@string/in"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView" />

        <CheckBox
            android:id="@+id/checkBox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="CheckBox" />

    </LinearLayout>

</LinearLayout>
